# OTProjekti

./: .gitignore  Payload_adventure_game.md  README.md
Payload_adventure_game/: .coveragerc  pyproject.toml  tasks.py
Payload_adventure_game/Documentation/: ArchitectureDescription.md  Arkkitehtuurikuvaus.md  BookOfSpentTime.txt  ChangeLog.md  Payload_adventure_game.md  TestingDocument.md  UserManual.md  WorkingHoursLog.md  WorkingHoursLog.txt  requirements_specification.md
Payload_adventure_game/Documentation/WorkingHoursLog/: WorkingHoursLog.md  WorkingHoursLog.txt
Payload_adventure_game/src/: Collisions.py  Payload_adventure_game.py  camera.py  chunkloader.py  index.py  movement.py  payload_adventure_game.py  player.py  terrainsprite.py
Payload_adventure_game/src/assets/mouse/: pointer.xcf
Payload_adventure_game/src/game/: config.txt  controls.txt
Payload_adventure_game/src/game/entities/: player.py  pointer.py  simpleMob.py  terrain_sprite.py  terrainsprite.py
Payload_adventure_game/src/game/gameloop/: adventure.py  gameloopHandler.py  gameloop_handler.py  menu.py
Payload_adventure_game/src/game/logic/: collisions.py  movement.py
Payload_adventure_game/src/game/rendering/: camera.py  renderer.py
Payload_adventure_game/src/game/tests/: chunkloader_test.py  collision_test.py  menu_test.py  movement_test.py
Payload_adventure_game/src/game/world/: chunkloader.py
Payload_adventure_game/src/logic/: chunkloader.py  collisions.py  movement.py  terrainsprite.py
Payload_adventure_game/src/tests/: collision_test.py  liikkuminen_testWIP.py
(+14 files in other folders)
