[tool.poetry]
name = "payload-adventure-game"
version = "0.1.0"
description = ""
authors = ["VehvilainenPooki <pooki.vehvilainen@helsinki.fi>"]
readme = "README.md"
packages = [{include = "payload_adventure_game"}]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
invoke = "^1.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
